metadata-retriever/metadata/objects/Requirement_UserStory__c.object
<CustomObject>
    <fields>
        <fullName>User_Story_Reviewed__c</fullName>
        <inlineHelpText>Stream Lead - responsible for setting to &quot;Ready for Review&quot; for user story</inlineHelpText>
        <label>User Story Reviewed</label>
        <picklist>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story_Reviewed_old__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reviewed by SA/TA</inlineHelpText>
        <label>User Story Reviewed (old)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validated_Date__c</fullName>
        <label>Validated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>assign_to_BA_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To BA/SBA (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requirement / User Story / Use Case</label>
    <listViews>
        <fullName>ALL_AU_CD</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>US_AU-CD</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <label>Phase_1_ALL_AU_CD</label>
    </listViews>
    <listViews>
        <fullName>ALL_AU_CD_1stR2014</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <columns>Implementation_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>US_AU-CD</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>1st Release 2014</value>
        </filters>
        <label>1stR2014 ALL AU CD</label>
    </listViews>
    <listViews>
        <fullName>ALL_AU_DD_1stR2014</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <columns>Implementation_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>US_AU-DD</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>1st Release 2014</value>
        </filters>
        <label>1stR2014 ALL AU DD</label>
    </listViews>
    <listViews>
        <fullName>ALL_AU_DealerDataOpenIssues</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ref_Process_UC__c</field>
            <operation>equals</operation>
            <value>DD&amp;OI</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <label>Phase_1_ALL_AU_DealerData&amp;OpenIssues</label>
    </listViews>
    <listViews>
        <fullName>ALL_AU_Lead</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>US_AU-LEAD</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <label>Phase_1_ALL_AU_Lead</label>
    </listViews>
    <listViews>
        <fullName>All_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>Assign_to_TA_TC_user__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Test_Script_Ready__c</columns>
        <columns>Dev_Completed__c</columns>
        <columns>Tested_Date__c</columns>
        <columns>Validated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.Requirement</value>
        </filters>
        <label>All Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_US_CustomerData_MBAuP</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>User_Story_Detail__c</columns>
        <columns>Alpha_Review_Target__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>Acceptance_Criteria_Security__c</columns>
        <columns>Status__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Market_Country__c</columns>
        <columns>Source_of_Requirement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>CD</value>
        </filters>
        <label>All US-CustomerData MBAuP</label>
    </listViews>
    <listViews>
        <fullName>All_Use_Cases</fullName>
        <columns>NAME</columns>
        <columns>Use_Case_Name__c</columns>
        <columns>Related_CR__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Business_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.Use_Case</value>
        </filters>
        <label>All Use Cases</label>
    </listViews>
    <listViews>
        <fullName>All_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>All User Stories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_User_Stories_China</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>Phase_1_All User Stories China</label>
    </listViews>
    <listViews>
        <fullName>Autralian_US</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>US_AU-Cpn</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <label>Phase_1_ALL_US_Cpn</label>
    </listViews>
    <listViews>
        <fullName>Phase_1_All_US_MBAuP</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>User_Story_Detail__c</columns>
        <columns>Alpha_Review_Target__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>Acceptance_Criteria_Security__c</columns>
        <columns>Status__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Market_Country__c</columns>
        <columns>Source_of_Requirement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>Phase_1_All_US-MBAuP</label>
    </listViews>
    <listViews>
        <fullName>Report_Dashboard</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Critical__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Assign_to_TA_TC_user__c</columns>
        <columns>Test_Script_Ready__c</columns>
        <columns>Dev_Completed__c</columns>
        <columns>Tested_Date__c</columns>
        <columns>Validated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Report/Dashboard</label>
    </listViews>
    <listViews>
        <fullName>X1stR2014_ALL_AU_UP</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <columns>Implementation_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>US_AU-UP</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>1st Release 2014</value>
        </filters>
        <label>1stR2014 ALL AU UP</label>
    </listViews>
    <nameField>
        <label>Requirement ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement / User Story / Use Case</pluralLabel>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>true</active>
        <label>Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Use_Case</fullName>
        <active>true</active>
        <description>capture the new requirements of the market</description>
        <label>Use Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Story</fullName>
        <active>true</active>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>